# gobang

./: readme.md
gobang/: Board.h  CMakeLists.txt  Gobang.cpp  Gobang.h  Gobang_API.cpp  SCalculate.cpp  SCalculate.h  Situation.h  Step.cpp  Step.h  ZMap.cpp  ZMap.h  makefile
gobang_gui/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
gobang_gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
